Done with Preserving Search Form Input

--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -81,6 +81,7 @@
         <p>No Listings Available</p>
       </div>
       {% endif %}
+      </div>
 
     <div class="row">
       <div class="col-md-12">
