--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row text-center">
       <div class="col-md-12">
-        <form action="search.html">
+        <form action="{% url 'search' %}">
           <!-- Form Row 1 -->
           <div class="form-row">
             <div class="col-md-4 mb-3">
@@ -13,6 +13,7 @@
                 name="keywords"
                 class="form-control"
                 placeholder="Keyword (Pool, Garage, etc)"
+                value="{{values.keywords}}"
               />
             </div>
 
@@ -23,6 +24,7 @@
                 name="city"
                 class="form-control"
                 placeholder="City"
+                value="{{values.city}}"
               />
             </div>
 
@@ -30,8 +32,12 @@
               <label class="sr-only">State</label>
               <select name="state" class="form-control">
                 <option selected="true" disabled="disabled">State (All)</option>
-                {% for key,value in state_choices.items %}
-                <option value="{{key}}">{{value}}</option>
+                {% for key,value in state_choices.items %}               
+                <option value="{{key}}"
+                {% if key == values.state %}
+                  selected
+                {% endif %}
+                >{{value}}</option>
                 {% endfor %}
               </select>
             </div>
@@ -45,7 +51,11 @@
                   >Bedrooms (Any)</option
                 >
                 {% for key,value in bedroom_choices.items %}
-                <option value="{{key}}">{{value}}</option>
+                <option value="{{key}}"
+                {% if key == values.bedrooms %}
+                  selected
+                {% endif %}
+                >{{value}}</option>
                 {% endfor %}
               </select>
             </div>
@@ -55,7 +65,11 @@
                   >Max Price (All)</option
                 >
                 {% for key,value in price_choices.items %}
-                <option value="{{key}}">{{value}}</option>
+                <option value="{{key}}"
+                {% if key == values.price %}
+                  selected
+                {% endif %}
+                >{{value}}</option>
                 {% endfor %}
               </select>
             </div>
@@ -90,268 +104,67 @@
 <section id="listings" class="py-4">
   <div class="container">
     <div class="row">
-      <!-- Listing 1 -->
+      {% if listings %} {% for listing in listings %}
       <div class="col-md-6 col-lg-4 mb-4">
         <div class="card listing-preview">
-          <img class="card-img-top" src="assets/img/homes/home-1.jpg" alt="" />
+          <img class="card-img-top" src="{{listing.photo_main.url}}" alt="" />
           <div class="card-img-overlay">
             <h2>
-              <span class="badge badge-secondary text-white">$490,000</span>
+              <span class="badge badge-secondary text-white"
+                >${{listing.price | intcomma}}</span
+              >
             </h2>
           </div>
           <div class="card-body">
             <div class="listing-heading text-center">
-              <h4 class="text-primary">45 Drivewood Circle</h4>
+              <h4 class="text-primary">{{listing.title}}</h4>
               <p>
-                <i class="fas fa-map-marker text-secondary"></i> Norwood MA,
-                02062
+                <i class="fas fa-map-marker text-secondary"></i>
+                {{listing.city}} {{listing.state}}, {{listing.zipcode}}
               </p>
             </div>
             <hr />
             <div class="row py-2 text-secondary">
               <div class="col-6">
-                <i class="fas fa-th-large"></i> Sqft: 3200
+                <i class="fas fa-th-large"></i> Sqft: {{listing.sqft}}
               </div>
-              <div class="col-6"><i class="fas fa-car"></i> Garage: 2</div>
+              <div class="col-6">
+                <i class="fas fa-car"></i> Garage: {{listing.garage}}
+              </div>
             </div>
             <div class="row py-2 text-secondary">
-              <div class="col-6"><i class="fas fa-bed"></i> Bedrooms: 3</div>
-              <div class="col-6"><i class="fas fa-bath"></i> Bathrooms: 2</div>
+              <div class="col-6">
+                <i class="fas fa-bed"></i> Bedrooms: {{listing.bedrooms}}
+              </div>
+              <div class="col-6">
+                <i class="fas fa-bath"></i> Bathrooms: {{listing.bathrooms}}
+              </div>
             </div>
             <hr />
             <div class="row py-2 text-secondary">
-              <div class="col-12"><i class="fas fa-user"></i> Kyle Brown</div>
+              <div class="col-12">
+                <i class="fas fa-user"></i> {{listing.realtor}}
+              </div>
             </div>
             <div class="row text-secondary pb-2">
-              <div class="col-6"><i class="fas fa-clock"></i> 2 days ago</div>
+              <div class="col-6">
+                <i class="fas fa-clock"></i> {{listing.list_date | timesince}}
+              </div>
             </div>
             <hr />
-            <a href="listing.html" class="btn btn-primary btn-block"
+            <a
+              href="{% url 'listing' listing.id %}"
+              class="btn btn-primary btn-block"
               >More Info</a
             >
           </div>
         </div>
       </div>
-
-      <!-- Listing 2 -->
-      <div class="col-md-6 col-lg-4 mb-4">
-        <div class="card listing-preview">
-          <img class="card-img-top" src="assets/img/homes/home-2.jpg" alt="" />
-          <div class="card-img-overlay">
-            <h2>
-              <span class="badge badge-secondary text-white">$550,000</span>
-            </h2>
-          </div>
-          <div class="card-body">
-            <div class="listing-heading text-center">
-              <h4 class="text-primary">18 Jefferson Lane</h4>
-              <p>
-                <i class="fas fa-map-marker text-secondary"></i> Woburn MA,
-                01801
-              </p>
-            </div>
-            <hr />
-            <div class="row py-2 text-secondary">
-              <div class="col-6">
-                <i class="fas fa-th-large"></i> Sqft: 3200
-              </div>
-              <div class="col-6"><i class="fas fa-car"></i> Garage: 1</div>
-            </div>
-            <div class="row py-2 text-secondary">
-              <div class="col-6"><i class="fas fa-bed"></i> Bedrooms: 4</div>
-              <div class="col-6">
-                <i class="fas fa-bath"></i> Bathrooms: 2.5
-              </div>
-            </div>
-            <hr />
-            <div class="row py-2 text-secondary">
-              <div class="col-6"><i class="fas fa-user"></i> Mark Hudson</div>
-            </div>
-            <div class="row text-secondary pb-2">
-              <div class="col-6"><i class="fas fa-clock"></i> 5 days ago</div>
-            </div>
-            <hr />
-            <a href="listing.html" class="btn btn-primary btn-block"
-              >More Info</a
-            >
-          </div>
-        </div>
+      {% endfor %} {% else %}
+      <div class="col-mod-12">
+        <p>No Listings Available</p>
       </div>
-
-      <!-- Listing 3 -->
-      <div class="col-md-6 col-lg-4 mb-4">
-        <div class="card listing-preview">
-          <img class="card-img-top" src="assets/img/homes/home-3.jpg" alt="" />
-          <div class="card-img-overlay">
-            <h2>
-              <span class="badge badge-secondary text-white">$580,000</span>
-            </h2>
-          </div>
-          <div class="card-body">
-            <div class="listing-heading text-center">
-              <h4 class="text-primary">187 Woodrow Street</h4>
-              <p>
-                <i class="fas fa-map-marker text-secondary"></i> Salem MA, 01915
-              </p>
-            </div>
-            <hr />
-            <div class="row py-2 text-secondary">
-              <div class="col-6">
-                <i class="fas fa-th-large"></i> Sqft: 3107
-              </div>
-              <div class="col-6"><i class="fas fa-car"></i> Garage: 0</div>
-            </div>
-            <div class="row py-2 text-secondary">
-              <div class="col-6"><i class="fas fa-bed"></i> Bedrooms: 4</div>
-              <div class="col-6"><i class="fas fa-bath"></i> Bathrooms: 3</div>
-            </div>
-            <hr />
-            <div class="row py-2 text-secondary">
-              <div class="col-6"><i class="fas fa-user"></i> Mark Hudson</div>
-            </div>
-            <div class="row text-secondary pb-2">
-              <div class="col-6"><i class="fas fa-clock"></i> 5 days ago</div>
-            </div>
-            <hr />
-            <a href="listing.html" class="btn btn-primary btn-block"
-              >More Info</a
-            >
-          </div>
-        </div>
-      </div>
-
-      <!-- Listing 4 -->
-      <div class="col-md-6 col-lg-4 mb-4">
-        <div class="card listing-preview">
-          <img class="card-img-top" src="assets/img/homes/home-4.jpg" alt="" />
-          <div class="card-img-overlay">
-            <h2>
-              <span class="badge badge-secondary text-white">$380,000</span>
-            </h2>
-          </div>
-          <div class="card-body">
-            <div class="listing-heading text-center">
-              <h4 class="text-primary">28 Gifford Street</h4>
-              <p>
-                <i class="fas fa-map-marker text-secondary"></i> Bedford NH,
-                03103
-              </p>
-            </div>
-            <hr />
-            <div class="row py-2 text-secondary">
-              <div class="col-6">
-                <i class="fas fa-th-large"></i> Sqft: 2927
-              </div>
-              <div class="col-6"><i class="fas fa-car"></i> Garage: 2</div>
-            </div>
-            <div class="row py-2 text-secondary">
-              <div class="col-6"><i class="fas fa-bed"></i> Bedrooms: 4</div>
-              <div class="col-6"><i class="fas fa-bath"></i> Bathrooms: 2</div>
-            </div>
-            <hr />
-            <div class="row py-2 text-secondary">
-              <div class="col-6"><i class="fas fa-user"></i> Jenny Johnson</div>
-            </div>
-            <div class="row text-secondary pb-2">
-              <div class="col-6"><i class="fas fa-clock"></i> 5 days ago</div>
-            </div>
-            <hr />
-            <a href="listing.html" class="btn btn-primary btn-block"
-              >More Info</a
-            >
-          </div>
-        </div>
-      </div>
-
-      <!-- Listing 5 -->
-      <div class="col-md-6 col-lg-4 mb-4">
-        <div class="card listing-preview">
-          <img class="card-img-top" src="assets/img/homes/home-5.jpg" alt="" />
-          <div class="card-img-overlay">
-            <h2>
-              <span class="badge badge-secondary text-white">$230,000</span>
-            </h2>
-          </div>
-          <div class="card-body">
-            <div class="listing-heading text-center">
-              <h4 class="text-primary">12 United Road</h4>
-              <p>
-                <i class="fas fa-map-marker text-secondary"></i> South Hampton
-                NH, 03827
-              </p>
-            </div>
-            <hr />
-            <div class="row py-2 text-secondary">
-              <div class="col-6">
-                <i class="fas fa-th-large"></i> Sqft: 2207
-              </div>
-              <div class="col-6"><i class="fas fa-car"></i> Garage: 1</div>
-            </div>
-            <div class="row py-2 text-secondary">
-              <div class="col-6"><i class="fas fa-bed"></i> Bedrooms: 3</div>
-              <div class="col-6">
-                <i class="fas fa-bath"></i> Bathrooms: 1.5
-              </div>
-            </div>
-            <hr />
-            <div class="row py-2 text-secondary">
-              <div class="col-6"><i class="fas fa-user"></i> Kyle Brown</div>
-            </div>
-            <div class="row text-secondary pb-2">
-              <div class="col-6"><i class="fas fa-clock"></i> 5 days ago</div>
-            </div>
-            <hr />
-            <a href="listing.html" class="btn btn-primary btn-block"
-              >More Info</a
-            >
-          </div>
-        </div>
-      </div>
-
-      <!-- Listing 6 -->
-      <div class="col-md-6 col-lg-4 mb-4">
-        <div class="card listing-preview">
-          <img class="card-img-top" src="assets/img/homes/home-6.jpg" alt="" />
-          <div class="card-img-overlay">
-            <h2>
-              <span class="badge badge-secondary text-white">$780,000</span>
-            </h2>
-          </div>
-          <div class="card-body">
-            <div class="listing-heading text-center">
-              <h4 class="text-primary">33 Essex Circle</h4>
-              <p>
-                <i class="fas fa-map-marker text-secondary"></i> Lexington MA,
-                01731
-              </p>
-            </div>
-            <hr />
-            <div class="row py-2 text-secondary">
-              <div class="col-6">
-                <i class="fas fa-th-large"></i> Sqft: 4145
-              </div>
-              <div class="col-6"><i class="fas fa-car"></i> Garage: 1</div>
-            </div>
-            <div class="row py-2 text-secondary">
-              <div class="col-6"><i class="fas fa-bed"></i> Bedrooms: 5</div>
-              <div class="col-6">
-                <i class="fas fa-bath"></i> Bathrooms: 3.5
-              </div>
-            </div>
-            <hr />
-            <div class="row py-2 text-secondary">
-              <div class="col-6"><i class="fas fa-user"></i> Kyle Brown</div>
-            </div>
-            <div class="row text-secondary pb-2">
-              <div class="col-6"><i class="fas fa-clock"></i> 5 days ago</div>
-            </div>
-            <hr />
-            <a href="listing.html" class="btn btn-primary btn-block"
-              >More Info</a
-            >
-          </div>
-        </div>
-      </div>
+      {% endif %}
     </div>
   </div>
 </section>
